<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/book_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>
            <ImageButton
                android:id="@+id/book_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title_label"/>
            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title_hint"/>
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_author_label"/>
            <EditText
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_hint"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/publication_date"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST2018"/>
    <CheckBox
        android:id="@+id/book_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_read_label"/>

    <Button
        android:id="@+id/book_rating"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/book_rating_text" />

    <Button
        android:id="@+id/book_review"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_review_text" />

</LinearLayout>